tests/check/illegal_ituple.co
// RUN: not choreo -DPERROR -sa=check %s 2>&1 | FileCheck --check-prefix=CHKPR %s
// RUN: not choreo -sa=check %s 2>&1 | FileCheck %s

__co__ auto illegal_ituple1() {
#ifdef PERROR
  ituple it0;
#endif
  ituple it1 = [7, 8];
  ituple<1> it2 = {7, 8};
  ituple<5> it3 = {1, 2, 3};
  ituple it4 = 100;
}

// CHKPR: error: an ituple must be initialized.
// CHECK: error: must use '{' and '}' to initialize an ituple.
// CHECK: error: `it2' is declared as "ituple<1>" but initialized as "ituple<2>".
// CHECK: error: `it3' is declared as "ituple<5>" but initialized as "ituple<3>".
// CHECK: `it4' is declared as "ituple<unknown>" but initialized as "s32".
// CHECK: Totally 5 errors have been detected.
